@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3104 2019/07/31 13:11:28 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3105 2019/07/31 13:13:39 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5061,3 +5061,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added math/R-RcmdrMisc version 2.5.1 [brook 2019-07-31]
 	Added math/R-acepack version 1.4.1 [brook 2019-07-31]
 	Added math/R-backports version 1.1.4 [brook 2019-07-31]
+	Added math/R-ellipsis version 0.2.0.1 [brook 2019-07-31]
